Added wine scores. Added more vulnerability types and removed the csrf
